--- a/wp-content/themes/hestia-child/style.css
+++ b/wp-content/themes/hestia-child/style.css
@@ -13,7 +13,8 @@ Version: 0.1
 /* Hero */
 
 .page-header .container .hestia-title, .page-header .container .title {
-    font-size: 14em;
+    font-size: 12em;
+    display: block;
 }
 
 .carousel span.sub-title {
@@ -21,14 +22,18 @@ Version: 0.1
 }
 
 .carousel #parallax_move .layer2 {
-    height: 60em;
-    width: 68em;
-    top: 10em;
+    height: 59em !important;
+    width: 62em;
+    top: 12em !important;
 }
 
 
 /* Projets */
 .hestia-blogs article:nth-of-type(6n+1) .category a, .related.products ul li:nth-of-type(6n+1) .category a, .woocommerce.archive .blog-post .products li:nth-of-type(6n+1) .category a, .woocommerce .products li:nth-of-type(6n+1) .category a, .shop-item:nth-of-type(6n+1) .category a, .related-posts div:nth-of-type(6n+1) .category a {
+    display: none;
+}
+
+.card .category:not([class*="text-"]), .card-no-width .category:not([class*="text-"]) {
     display: none;
 }
 
@@ -53,6 +58,10 @@ Version: 0.1
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 2em;
     border-radius: 10px 10px 10px 10px;
+}
+
+.wp-block-columns:not(.is-not-stacked-on-mobile)>.wp-block-column {
+    padding: 1em 1em;
 }
 
 .blog-post .section-blog-info {
